awx/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: awx-gateway
  namespace: awx
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 2080
    name: awx-http-gw
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTPS
    port: 2443
    name: awx-https-gw
    tls:
      mode: Terminate
      certificateRefs:
      - name: awx-tls-secret
    allowedRoutes:
      namespaces:
        from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: awx-http-route
  namespace: awx
spec:
  parentRefs:
  - name: awx-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: awx-demo-service
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: awx-gateway-lb
  namespace: awx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 2080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 2443
  selector: {} 
---
apiVersion: v1
kind: Endpoints
metadata:
  name: awx-gateway-lb
  namespace: awx
subsets:
  - addresses:
      - ip: 10.0.4.101  
      - ip: 10.0.4.102  
    ports:
      - name: http
        port: 2080
        protocol: TCP
      - name: https
        port: 2443
        protocol: TCP
