awx/resources/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: awx-https-route
  namespace: awx
spec:
  parentRefs:
  - name: cluster-gw
    namespace: gateways
    sectionName: web-ls-tls
  hostnames:
    - awx.cluster-hybrid.ddnsfree.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: awx-demo-service
      port: 80
